# tuffysearch-api

./: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  setup_embeddings.py
data/: cleaned_2025-2026_catalog.json  courses.json
data/faiss_index/: index.pkl
